--- a/live-cursors/src/public/index.html
+++ b/live-cursors/src/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,20 @@
     <link rel="stylesheet" href="style.css">
     <script src="index.js" type="module"></script>
 </head>
+
 <body id="box">
     <template id="cursor">
         <svg viewBox="0 0 16.3 24.7" class="cursor">
-            <path stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M15.6 15.6L.6.6v20.5l4.6-4.5 3.2 7.5 3.4-1.3-3-7.2z" />
+            <path stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"
+                d="M15.6 15.6L.6.6v20.5l4.6-4.5 3.2 7.5 3.4-1.3-3-7.2z" />
+        </svg>
+    </template>
+    <template id="myCursor">
+        <svg viewBox="0 0 16.3 24.7" class="cursor">
+            <path stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"
+                d="M15.6 15.6L.6.6v20.5l4.6-4.5 3.2 7.5 3.4-1.3-3-7.2z" />
         </svg>
     </template>
 </body>
+
 </html>
